--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
 
 <body>
 <app-root></app-root>
+
+<footer class="bg-white text-white text-center py-3">
+    <p class="text-dark">&copy; 2025 My Website | All Rights Reserved</p>
+    <a href="#" class="text-dark">Privacy Policy</a> |
+    <a href="#" class="text-dark">Terms of Service</a>
+</footer>
+
 </body>
 
 </html>
